#[package]
#name = "jirs"
#version = "0.1.0"
#authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
#edition = "2018"
#description = "JIRS (Simplified JIRA in Rust)"
#repository = "https://gitlab.com/adrian.wozniak/jirs"
#license = "MPL-2.0"
#license-file = "./LICENSE"

[profile.dev]
opt-level = 0               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug = 2

[profile.release]
lto = true
opt-level = 's'

[workspace]
members = [
    "./jirs-cli",
    "./jirs-server",
    "./jirs-client",
    "./jirs-data",
    "./jirs-css",
    "./jirs-bat",
]

