#[package]
#name = "jirs"
#version = "0.1.0"
#authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
#edition = "2018"
#description = "JIRS (Simplified JIRA in Rust)"
#repository = "https://gitlab.com/adrian.wozniak/jirs"
#license = "MPL-2.0"
#license-file = "./LICENSE"

[workspace]
members = [
    "./jirs-cli",
    "./jirs-server",
    "./jirs-client",
    "./jirs-css",
    "./shared/jirs-config",
    "./shared/jirs-data",
    "./actors/highlight-actor",
    "./actors/database-actor",
    "./actors/database-actor/database_actor-derive",
    "./actors/web-actor",
    "./actors/websocket-actor",
    "./actors/mail-actor",
    "./actors/filesystem-actor"
]
