#[package]
#name = "jirs"
#version = "0.1.0"
#authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
#edition = "2018"
#description = "JIRS (Simplified JIRA in Rust)"
#repository = "https://gitlab.com/adrian.wozniak/jirs"
#license = "MPL-2.0"
#license-file = "./LICENSE"

[workspace]
members = [
    "./shared/common",
    "./jirs-cli",
    "./jirs-server",
    "./shared/jirs-config",
    "./shared/jirs-data",
    "./derive/derive_enum_iter",
    "./derive/derive_enum_primitive",
    "./derive/derive_enum_sql",
    "./derive/derive_db_execute",
    "./actors/highlight-actor",
    "./actors/database-actor",
    "./actors/web-actor",
    "./actors/websocket-actor",
    "./actors/mail-actor",
    "./actors/amazon-actor",
    "./actors/filesystem-actor",
    # Client
    "./web"
]
