[package]
name = "jirs_bat"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "BAT scrapping"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"

[dependencies]
serde = "*"

[dependencies.flate2]
version = "1.0"
default-features = false

[dependencies.bincode]
version = "1.0"

[dependencies.syntect]
version = "=4.2.0"
default-features = false
features = [
    "regex-fancy",
    "parsing",
    "yaml-load",
    "dump-load",
    "dump-create",
    "dump-load-rs",
    "dump-create-rs",
    "assets",
    "html",
    "default-fancy"
]
