[package]
name = "jirs_bat"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "BAT scrapping"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"

[dependencies]
serde = "*"

[dependencies.lazy_static]
version = "1.0"

[dependencies.lazycell]
version = "1.0"

[dependencies.flate2]
version = "1.0"
default-features = false

[dependencies.bincode]
version = "1.0"

[dependencies.bitflags]
version = "1.0.4"

[dependencies.fancy-regex]
version = "0.3.2"

[dependencies.fnv]
version = "1.0"

[dependencies.plist]
version = "1"

[dependencies.regex-syntax]
version = "0.6"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.walkdir]
version = "2.0"

[dependencies.yaml-rust]
version = "0.4"
