[package]
name = "jirs-cli"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"

[[bin]]
name = "jirs"
path = "./src/main.rs"

[dependencies]
tui = { version = "0.9.5" }
clap = { version = "2.33.0" }
actix = { version = "0.9.0" }
actix-rt = { version = "1.0.0" }
