[package]
name = "jirsc"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"

[dependencies]
common = { path = "../shared/common" }

tui = { version = "0.9.5", features = ["termion"] }
clap = { version = "2.33.0" }
actix = { version = "0.10.0" }
termion = { version = "*" }
