[package]
name = "jirs_client"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) WASM client"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[[bin]]
name = "print"
path = "./src/print.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jirs_client"
path = "src/lib.rs"

[profile.dev]
opt-level = 0               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.release]
lto = true
opt-level = 's'

[dependencies]
jirs-data = { path = "../jirs-data" }

wee_alloc = "*"

seed = { version = "0.7.0" }

serde = { version = "*" }
serde_json = { version = "*" }
bincode = { version = "*" }
ron = { version = "*" }
bson = "1.1.0"
serde_cbor = "0.11.1"

chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind"] }
uuid = { version = "0.8.1", features = ["serde"] }
futures = "^0.1.26"
comrak = "*"
num-traits = { version = "*" }

lazy_static = "*"
syntect = { version = "*", default-features = false, features = ["html", "regex-fancy", "dump-load-rs"] }

[dependencies.wasm-bindgen]
version = "*"
features = ["enable-interning"]

[dependencies.js-sys]
version = "*"
default-features = false

[dependencies.web-sys]
version = "*"
default-features = false
features = [
    # elements
    "Window",
    "HtmlDivElement",
    "HtmlDocument",
    "Document",
    "HtmlBodyElement",
    # types
    "DataTransfer",
    "DomRect",
    "Selection",
    "CssStyleDeclaration",
    "WebSocket",
    "BinaryType",
    "Blob",
    "AddEventListenerOptions",
    "File",
    "FileList",
    "FormData",
    "FileReader",
    "FileReaderSync",
    "Range",
    # events
    "EventTarget",
    "ErrorEvent",
    "MessageEvent",
    "KeyEvent",
    "KeyboardEvent",
    "DragEvent",
]

[dev-dependencies]
wasm-bindgen-test = { version = "*" }
