[package]
name = "jirs_client"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) WASM client"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jirs_client"
path = "src/lib.rs"

[dependencies]
jirs-data = { path = "../shared/jirs-data", features = ["frontend"] }

wee_alloc = "*"

seed = { version = "0.7.0" }

serde = { version = "*" }
serde_json = { version = "*" }
bincode = { version = "*" }

chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind"] }
uuid = { version = "0.8.1", features = ["serde"] }
futures = "^0.1.26"
comrak = "*"

[dependencies.wasm-bindgen]
version = "*"
features = ["enable-interning"]

[dependencies.js-sys]
version = "*"
default-features = false

[dependencies.web-sys]
version = "*"
default-features = false
features = [
    # elements
    "Window",
    "HtmlDivElement",
    "HtmlDocument",
    "Document",
    "HtmlBodyElement",
    # types
    "DataTransfer",
    "DomRect",
    "Selection",
    "CssStyleDeclaration",
    "WebSocket",
    "BinaryType",
    "Blob",
    "AddEventListenerOptions",
    "File",
    "FileList",
    "FormData",
    "FileReader",
    "FileReaderSync",
    "Range",
    # events
    "EventTarget",
    "ErrorEvent",
    "MessageEvent",
    "KeyEvent",
    "KeyboardEvent",
    "DragEvent",
]

[dev-dependencies]
wasm-bindgen-test = { version = "*" }
