[package]
name = "jirs-css"
version = "0.1.0"
authors = ["Adrian Woźniak <adrian.wozniak.1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { version = "*" }
notify = { version = "*" }
gumdrop = { version = "*", default-features = false }
