[package]
name = "jirs-server"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) Actix server"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[[bin]]
name = "jirs_server"
path = "./src/main.rs"

[features]
aws-s3 = [
    "rusoto_s3",
    "rusoto_core"
]
local-storage = [
    "actix-files"
]
default = [
    "aws-s3",
    "local-storage",
]

[dependencies]
serde = { version = "*", features = ["derive"] }
actix = { version = "*" }
actix-web = { version = "*" }
actix-cors = { version = "*" }
actix-service = { version = "*" }
actix-rt = "1"
actix-web-actors = "*"
actix-multipart = { version = "*" }

dotenv = { version = "*" }
byteorder = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
libc = { version = "0.2.0" }
pq-sys = { version = ">=0.3.0, <0.5.0" }
quickcheck = { version = "0.4" }
serde_json = { version = ">=0.8.0, <2.0" }
toml = "0.5.6"
bincode = "1.2.1"
time = { version = "0.1" }
url = { version = "2.1.0" }
percent-encoding = { version = "2.1.0" }
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
ipnetwork = { version = ">=0.12.2, <0.17.0" }
num-bigint = { version = ">=0.1.41, <0.3" }
num-traits = { version = "0.2" }
num-integer = { version = "0.1.32" }
bigdecimal = { version = ">= 0.0.10, <= 0.1.0" }
bitflags = { version = "1.0" }
r2d2 = { version = ">= 0.8, < 0.9" }
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"
futures = { version = "*" }
lettre = { version = "*" }
lettre_email = { version = "*" }

[dependencies.diesel]
version = "1.4.4"
features = [ "unstable", "postgres", "numeric", "extras", "uuidv07" ]

[dependencies.jirs-data]
path = "../jirs-data"
features = [ "backend" ]

# Amazon S3
[dependencies.rusoto_s3]
optional = true
version = "0.43.0"

[dependencies.rusoto_core]
optional = true
version = "0.43.0"

# Local storage
[dependencies.actix-files]
optional = true
version = "0.2.1"
