[package]
name = "jirs-server"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) Actix server"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[[bin]]
name = "jirs_server"
path = "./src/main.rs"

[features]
aws-s3 = ["amazon-actor"]
local-storage = ["filesystem-actor"]
default = [
    "aws-s3",
    "local-storage",
]

[dependencies]
actix = { version = "0.10.0" }
actix-web = { version = "*" }
actix-cors = { version = "*" }
actix-service = { version = "*" }
actix-rt = "1"
actix-web-actors = "*"

dotenv = { version = "*" }

byteorder = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.1" }
url = { version = "2.1.0" }
percent-encoding = { version = "2.1.0" }
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
ipnetwork = { version = ">=0.12.2, <0.17.0" }
num-bigint = { version = ">=0.1.41, <0.3" }
num-traits = { version = "0.2" }
num-integer = { version = "0.1.32" }
bigdecimal = { version = ">= 0.0.10, <= 0.1.0" }
bitflags = { version = "1.0" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = ">=0.8.0, <2.0" }
toml = "0.5.6"
bincode = "1.2.1"

log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"

async-trait = { version = "*" }

futures = { version = "*" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

[dependencies.jirs-config]
path = "../shared/jirs-config"
features = ["web", "websocket", "local-storage", "hi", "database"]

[dependencies.jirs-data]
path = "../shared/jirs-data"
features = ["backend"]

[dependencies.highlight-actor]
path = "../actors/highlight-actor"

[dependencies.database-actor]
path = "../actors/database-actor"

[dependencies.web-actor]
path = "../actors/web-actor"

[dependencies.websocket-actor]
path = "../actors/websocket-actor"

[dependencies.mail-actor]
path = "../actors/mail-actor"

[dependencies.filesystem-actor]
path = "../actors/filesystem-actor"
optional = true

[dependencies.amazon-actor]
path = "../actors/amazon-actor"
optional = true

[dependencies.tokio]
version = "0.2.23"
features = ["dns"]
