[package]
edition = "2018"
name = "jirs_syntect"
version = "4.2.0"
authors = ["Tristan Hume <tristan@thume.ca>"]
exclude = ["testdata/*", "/scripts/*", "/Makefile", "/codecov.yml"]
description = "library for high quality syntax highlighting and code intelligence using Sublime Text's grammars"
documentation = "https://docs.rs/syntect"
readme = "Readme.md"
keywords = ["syntax", "highlighting", "highlighter", "colouring", "parsing"]
categories = ["parser-implementations", "parsing", "text-processing"]
license = "MIT"
repository = "https://github.com/trishume/syntect"

[features]
wasm = []
default = []

[dependencies]
serde = "*"

[dependencies.bitflags]
version = "1.0.4"

[dependencies.fancy-regex]
version = "0.3.2"

[dependencies.fnv]
version = "1.0"

[dependencies.lazy_static]
version = "1.0"

#[dependencies.lazycell]
#version = "1.0"

[dependencies.plist]
version = "1"

[dependencies.regex-syntax]
version = "0.6"
