[package]
name = "amazon-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "amazon_actor"
path = "./src/lib.rs"

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }
bytes = { version = "1.0.0" }

serde = { version = "*" }

futures = { version = "0.3.8" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["mail", "web", "local-storage"]

# Amazon S3
[dependencies.rusoto_s3]
version = "0.47.0"

[dependencies.rusoto_core]
version = "0.47.0"

[dependencies.rusoto_signature]
version = "0.47.0"

[dependencies.tokio]
version = "0.2.23"
features = ["tcp", "time", "rt-core", "fs"]
