[package]
name = "database-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "database_actor"
path = "./src/lib.rs"

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }

serde = { version = "*" }
bincode = { version = "*" }
toml = { version = "*" }

futures = { version = "0.3.8" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

pq-sys = { version = ">=0.3.0, <0.5.0" }
r2d2 = { version = ">= 0.8, < 0.9" }

dotenv = { version = "*" }

byteorder = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.1" }
url = { version = "2.1.0" }
percent-encoding = { version = "2.1.0" }
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
ipnetwork = { version = ">=0.12.2, <0.17.0" }
num-bigint = { version = ">=0.1.41, <0.3" }
num-traits = { version = "0.2" }
num-integer = { version = "0.1.32" }
bigdecimal = { version = ">= 0.0.10, <= 0.1.0" }
bitflags = { version = "1.0" }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["database"]

[dependencies.jirs-data]
path = "../../shared/jirs-data"
features = ["backend"]

[dependencies.derive_db_execute]
path = "../../derive/derive_db_execute"

[dependencies.diesel]
version = "1.4.7"
features = [ "postgres", "numeric", "uuidv07", "r2d2", "extras" ]
