[package]
name = "filesystem-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "filesystem_actor"
path = "./src/lib.rs"

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }
actix-files = { version = "0.5.0" }

futures = { version = "0.3.8" }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["local-storage"]

[dependencies.tokio]
version = "0.2.23"
features = ["dns"]
