[package]
name = "mail-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "mail_actor"
path = "./src/lib.rs"

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }

serde = "*"
toml = { version = "*" }

log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"

dotenv = { version = "*" }

uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }

futures = { version = "*" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

lettre = { version = "*" }
lettre_email = { version = "*" }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["mail", "web"]
