[package]
name = "mail-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "mail_actor"
path = "./src/lib.rs"

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }

serde = "*"
toml = { version = "*" }

dotenv = { version = "*" }

uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }

futures = { version = "*" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

lettre = { version = "0.10.0-rc.3" }
lettre_email = { version = "*" }

log = { version = "*" }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["mail", "web"]
