[package]
name = "web-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "web_actor"
path = "./src/lib.rs"

[features]
local-storage = ["filesystem-actor"]
aws-s3 = ["amazon-actor"]
default = ["local-storage", "aws-s3"]

[dependencies]
common = { path = "../../shared/common" }
actix = { version = "0.10.0" }

serde = "*"
bincode = "*"
toml = { version = "*" }

actix-multipart = "*"

bytes = { version = "0.5.6" }

futures = { version = "0.3.8" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"

uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["mail", "web", "local-storage"]

[dependencies.jirs-data]
path = "../../shared/jirs-data"
features = ["backend"]

[dependencies.database-actor]
path = "../database-actor"

[dependencies.mail-actor]
path = "../mail-actor"

[dependencies.websocket-actor]
path = "../websocket-actor"

[dependencies.filesystem-actor]
path = "../filesystem-actor"
optional = true

[dependencies.amazon-actor]
path = "../amazon-actor"
optional = true

[dependencies.tokio]
version = "0.2.23"
features = ["dns"]
