[package]
name = "websocket-actor"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "websocket_actor"
path = "./src/lib.rs"

[dependencies]
serde = "*"
bincode = "*"
toml = { version = "*" }

actix = { version = "0.10.0" }
actix-web = { version = "*" }
actix-web-actors = "*"

futures = { version = "0.3.8" }
openssl-sys = { version = "*", features = ["vendored"] }
libc = { version = "0.2.0", default-features = false }

flate2 = { version = "*" }
syntect = { version = "*" }
lazy_static = { version = "*" }

log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"

uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }

[dependencies.comrak]
version = "*"

[dependencies.pulldown-cmark]
version = "*"

[dependencies.jirs-config]
path = "../../shared/jirs-config"
features = ["websocket"]

[dependencies.jirs-data]
path = "../../shared/jirs-data"
features = ["backend"]

[dependencies.database-actor]
path = "../database-actor"

[dependencies.mail-actor]
path = "../mail-actor"

[dependencies.highlight-actor]
path = "../highlight-actor"
