[package]
name = "jirs_contexts"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) WASM client"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jirs_contexts"
path = "src/lib.rs"

[dependencies]
jirs-data = { path = "../../jirs-data", features = ["frontend"] }

[dependencies.jirs_syntect]
path = "../../jirs-syntect"
features = ["wasm"]

[dependencies.lazycell]
version = "1.0"
