[package]
name = "jirs_highlight"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) WASM client"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jirs_highlight"
path = "src/lib.rs"

[dependencies]
jirs-data = { path = "../../jirs-data", features = ["frontend"] }

serde = "*"
bincode = "*"
flate2 = "*"
lazy_static = "*"
wee_alloc = "*"

[dependencies.jirs_syntect]
path = "../../jirs-syntect"

[dependencies.jirs_contexts]
path = "../jirs-contexts"

[dependencies.jirs_syntaxes]
path = "../jirs-syntaxes"

[dependencies.lazycell]
version = "1.0"

[dependencies.wasm-bindgen]
version = "*"
features = ["enable-interning"]

[dependencies.js-sys]
version = "*"
default-features = false

[dependencies.web-sys]
version = "*"
features = [
    "Window",
    "Worker",
]
