[package]
name = "common"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) Actix server"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"

[dependencies]
actix = { version = "0.10.0" }

actix-web = { version = "3.3.2" }
actix-cors = { version = "0.5.4" }
actix-service = { version = "1.0.6" }
actix-rt = { version = "1" }
actix-web-actors = { version = "3.0.0" }
actix_derive = { version = "0.5.0" }

serde = { version = "*" }
serde_derive = { version = "*" }

log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.7"

reexport-proc-macro = { version = "*" }
