[package]
name = "jirs-data"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "jirs_data"
path = "./src/lib.rs"

[features]
backend = ["diesel", "actix", "derive_enum_sql"]
frontend = []

[dependencies]
serde = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = ">=0.7.0, <0.9.0", features = ["serde"] }

[dependencies.actix]
version = "0.10.0"
optional = true

[dependencies.diesel]
optional = true
version = "1.4.5"
features = ["unstable", "postgres", "numeric", "extras", "uuidv07"]

[dependencies.derive_enum_iter]
path = "../../derive/derive_enum_iter"

[dependencies.derive_enum_primitive]
path = "../../derive/derive_enum_primitive"

[dependencies.derive_enum_sql]
path = "../../derive/derive_enum_sql"
optional = true
