[package]
name = "jirs-data"
version = "0.1.0"
authors = ["Adrian Wozniak <adrian.wozniak@ita-prog.pl>"]
edition = "2018"
description = "JIRS (Simplified JIRA in Rust) shared data types"
repository = "https://gitlab.com/adrian.wozniak/jirs"
license = "MPL-2.0"
#license-file = "../LICENSE"

[lib]
name = "jirs_data"
path = "./src/lib.rs"

[features]
backend = ["diesel", "actix", "derive_enum_sql"]
frontend = []

[dependencies]
serde = { version = "*" }
serde_json = { version = "*" }
chrono = { version = "*", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }

[dependencies.actix]
version = "0.10.0"
optional = true

[dependencies.diesel]
version = "1.4.7"
features = [ "postgres", "numeric", "uuidv07", "r2d2" ]
optional = true

[dependencies.derive_enum_iter]
path = "../../derive/derive_enum_iter"

[dependencies.derive_enum_primitive]
path = "../../derive/derive_enum_primitive"

[dependencies.derive_enum_sql]
path = "../../derive/derive_enum_sql"
optional = true
